// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSlots render "No Appointment Available" 1`] = `
<styled.div>
  <styled.div>
    No appointment available for this date
  </styled.div>
</styled.div>
`;

exports[`TimeSlots render based on the given schedule 1`] = `
<styled.div>
  <styled.div>
    <styled.button
      key="tb_0"
      onClick={[Function]}
      selected={false}
    >
      <styled.div>
        9:45
      </styled.div>
    </styled.button>
    <styled.button
      key="tb_1"
      onClick={[Function]}
      selected={false}
    >
      <styled.div>
        10:00
      </styled.div>
    </styled.button>
    <styled.button
      key="tb_2"
      onClick={[Function]}
      selected={false}
    >
      <styled.div>
        10:15
      </styled.div>
    </styled.button>
  </styled.div>
</styled.div>
`;

exports[`TimeSlots render time selection based on the given schedule 1`] = `
<styled.div>
  <styled.div>
    <styled.button
      key="tb_0"
      onClick={[Function]}
      selected={false}
    >
      <styled.div>
        9:45
      </styled.div>
    </styled.button>
    <styled.button
      key="tb_1"
      onClick={[Function]}
      selected={true}
    >
      <styled.div>
        10:00
      </styled.div>
    </styled.button>
    <styled.button
      key="tb_2"
      onClick={[Function]}
      selected={false}
    >
      <styled.div>
        10:15
      </styled.div>
    </styled.button>
  </styled.div>
</styled.div>
`;
